# NarrativeMorph

./: .env.template  .gitignore  ARCHITECTURE_EVOLUTION_PLAN.md  CREWAI_TOOLS.md  CREWAI_VS_LANGGRAPH.md  DOCKER_STRATEGY.md  HACKATHON_PRIORITY.md  IMPLEMENTATION_STEPS.md  README.md  TESTING_REPORT.md  debug_text_chunker.py  docker-compose.production.yml  docker-compose.yml  setup.ps1  setup.sh  test_both_services.py  test_llm_direct.py  test_replicate_integration.py  test_system.py  test_zip_download.py
book-to-game/: .env.example  DEVELOPMENT_COMPLETE.md  IMPROVEMENT_ROADMAP.md  MOCK_TESTING_README.md  MONDADORI_CHALLENGE_STRATEGY.md  MONDADORI_DEMO_SUCCESS.md  README.md  check_env.py  debug_app.py  ex.csv  macbeth_demo.json  macbeth_demo_mondadori.json  macbeth_mondadori_unity_result.json  macbeth_scenes.json  macbeth_transformation_result.json  pyproject.toml  setup_mock_testing.py  simple_api_test.py  start_mock_server.py  start_server.py  test_agent_mock.py  test_api.py  test_api_endpoints.py  test_auto_scenarios.py  test_complete_mock_system.py  test_complete_project_generation.py  test_download.py  test_endpoints.py  test_final_workflow.py  test_mondadori_content.json  test_real_apis.py  test_scenarios.py  test_service.py  test_service_direct.py  test_simple.py  test_simple_api.py  test_simple_mock_system.py  test_simple_real_api.py  test_startup.py
book-to-game/src/: __init__.py
book-to-game/src/agents/: __init__.py  agent_coordinator.py  asset_generation_agent.py  game_design_agent.py  quality_assurance_agent.py  unity_code_agent.py
database/: README.md
(+173 files in other folders)
